--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,40 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+ .jumbotron {
+   width: 1000px;
+   height: 470px;
+   background-color: #020733;
+   padding-top: 100px;
+   margin: 0 auto;
+   border-radius: 5px;
+   color: white;
+ }
+
+.promo-box {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.promo-title {
+   padding: 0 50px;
+   font-size: 44px;
+}
+
+.promo-subtitle {
+   max-width: 580px;
+   margin: 10px auto;
+   padding: 0 50px;
+   font-size: 24px;
+}
+
+.promo-text {
+  padding: 0 50px;
+  color: rgba(255,255,255,.65);
+  font-size: 18px;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+  letter-spacing: 0;
+  font-weight: 300;
+  font-style: normal;
+}
