edit button on right

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,10 @@ body {
   margin-left: 10px;
 }
 
+.edit-btn {
+  float: right;
+}
+
 .jumbotron {
   max-width: 1000px;
   //  background-color: #020733;
