--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@ body {
 
 .edit-btn-grp .btn{
   float: right;
-  margin: 0 5px;
+  margin: 10px 5px;
 }
 
 .jumbotron {
@@ -163,7 +163,7 @@ blockquote h3:after {
 }
 
 .btn-upload {
-  margin: 0 auto;
+  margin: 10px 50% 0 50%;
 }
 
 textarea.form-control {
